<?xml version="1.0" encoding="UTF-8"?>
<!--

    CSVeed (https://github.com/42BV/CSVeed)

    Copyright 2013-2023 CSVeed.

    All rights reserved. This program and the accompanying materials
    are made available under the terms of The Apache Software License,
    Version 2.0 which accompanies this distribution, and is available at
    https://www.apache.org/licenses/LICENSE-2.0.txt

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.hazendaz</groupId>
        <artifactId>base-parent</artifactId>
        <version>40</version>
        <relativePath />
    </parent>

    <groupId>org.csveed</groupId>
    <artifactId>csveed</artifactId>
    <version>0.7.5-SNAPSHOT</version>

    <name>CSVeed</name>
    <description>Java toolkit for mapping CSV-to-Bean mapping and vice versa.  Redirection to Introduction in 5 seconds!</description>
    <inceptionYear>2013</inceptionYear>
    <url>http://csveed.org</url>

    <organization>
        <name>42 BV</name>
        <url>https://42.nl/</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:ssh://git@github.com/42BV/CSVeed.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/42BV/CSVeed.git</developerConnection>
        <url>https://github.com/42BV/CSVeed</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>GitHub Issue Management</system>
        <url>https://github.com/42BV/CSVeed/issues</url>
    </issueManagement>
    <ciManagement>
        <system>GitHub Actions</system>
        <url>https://travis-ci.org/42BV/CSVeed</url>
    </ciManagement>
    <distributionManagement>
        <site>
            <id>gh-pages-scm</id>
            <name>GitHub Pages</name>
            <url>scm:git:ssh://git@github.com/42BV/CSVeed.git</url>
        </site>
    </distributionManagement>

    <developers>
        <developer>
            <name>Robert Bor</name>
            <organization>42</organization>
        </developer>
    </developers>

    <properties>
        <java.version>8</java.version>
        <java.release.version>8</java.release.version>

        <junit.version>5.9.3</junit.version>
        <slf4j.version>2.0.7</slf4j.version>
    </properties>

    <dependencies>

        <!-- Used for unit testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>

    </dependencies>

    <build>
        <defaultGoal>install</defaultGoal>
        <plugins>
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <configuration>
                    <licenseSets>
                        <licenseSet>
                            <excludes combine.children="append">
                                <exclude>**/CNAME</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
